[metadata]
name = pymsi
version = 0.0.1
author = Alan Race
author_email = alan.race@uni-marburg.de
description = Package for analysing mass spectrometry imaging data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlanRace/pymsi
project_urls =
    Bug Tracker = https://github.com/AlanRace/pymsi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src